# trampball

./: .gitignore  CMakeLists.txt  COPYING
res/: corner-test.world  perfect16.tbf  worldfile.txt
res/font/perfect_dos_vga/: perfect16.tbf  perfect16.tbf.xpm
src/: ball.c  ball.h  compat.h  config.h.in  font.c  font.h  game.c  game.h  interaction.c  interaction.h  main.c  physics.h  trampball.c  trampball.h  trampoline.c  trampoline.h
util/: trampballfont.py
